# OAIP

./: Makefile  pyproject.toml
VD_games/: __init__.py  engine.py
VD_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  brain_calc.py  gcd.py  vd_calc.py  vd_even.py  vd_games.py  vd_gcd.py  vd_main.py  vd_prime.py  vd_progression.py
games_projeckt_volkova/VD_games/scripts/: VD_games.py
