[project]
name = "oaip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["games_projeckt_volkova"]

[project.scripts]
VD-games = "games_projeckt_volkova.VD_games.scripts.VD_main:main"
