[project]
name = "oaip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[project.scripts]
vd-calc = "VD_games.scripts.vd_calc:main"
vd-even = "VD_games.scripts.vd_even:main"
vd-gcd = "VD_games.scripts.vd_gcd:main"
vd-progression = "VD_games.scripts.vd_progression:main"
vd-prime = "VD_games.scripts.vd_prime:main"
vd-main = "VD_games.scripts.vd_main:main"
